# Hackthone_todoapp_vibecode

phase_01/: .gitignore  README.md  demo.py  pyproject.toml
phase_01/.claude/agents/: todo-test-automation.md
phase_01/.specify/memory/: constitution.md
phase_01/history/prompts/1-phase-1-cli-todo/: 002-phase-1-cli-todo-specification.spec.prompt.md  003-phase-1-implementation-plan.plan.prompt.md  004-phase-1-implementation-tasks.tasks.prompt.md  005-complete-phase-1-implementation.green.prompt.md
phase_01/history/prompts/constitution/: 001-establish-multi-phase-todo-constitution.constitution.prompt.md
phase_01/specs/1-phase-1-cli-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase_01/specs/1-phase-1-cli-todo/contracts/: cli-interface.md
phase_01/src/: main.py
phase_01/src/infrastructure/: logger.py  storage.py
phase_01/src/services/: todo_service.py
phase_01/tests/unit/: test_storage.py  test_todo.py
phase_02/: AUTH_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  README.md  create_verify_token.py  debug_token.py  demo_user_setup.txt  error.txt  package-lock.json  sp.specify.md  start_backend.bat  test_api.py  test_auth.py  test_backend_jwt_integration.py  test_complete_flow.py  test_debug.py  test_debug2.py  test_e2e_flow.py  test_jwt.py  test_secret.py  test_signup.py  test_task_api.py  test_with_debug.py  verify_token_correct.py
phase_03/: AI_TASKS_FIX_COMPLETE.md  AI_TASKS_ROUTE_SETUP.md  BACKEND_CHECK_COMPLETE_URDU.md  BACKEND_FIXED_NOW_START.md  BACKEND_FIX_URDU.md  BACKEND_NOT_RELOADING.md  BACKEND_RELOAD_NAHI_HO_RAHA.md  (+123 more)
(+578 files in other folders)
